trying to fixed sending email

--- a/src/templates/email/email-verification.html
+++ b/src/templates/email/email-verification.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <style type="text/css">
-      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
+      /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"); */
       body,
       table,
       td,
